--- a/app/src/main/res/layout/musiclist.xml
+++ b/app/src/main/res/layout/musiclist.xml
@@ -6,5 +6,6 @@
     <TextView
         android:id="@+id/musicList"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="22dp"/>
 </LinearLayout>
